# usfcoursehelper

./: .gitignore  Cargo.toml  README.md  flake.nix  output.csv
.github/scripts/: package-release.sh  render-homebrew-formula.sh
.github/workflows/: manual-release.yml
src/: main.rs
