[package]
name = "usfcoursehelper"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.0"
prettytable = "0.10.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
