[package]
name = "usfcoursehelper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5.38", features = ["derive", "env"] }
csv = "1.3.0"
prettytable = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["cookies", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
